# estudo_opencl_device_ennumeration

./: CMakeLists.txt  DeviceEnnumeration.vcxproj  DeviceEnnumeration.vcxproj.filters  DeviceEnumerator.cpp  DeviceEnumerator.h  HelloOpenCl.sln
